[metadata]
# replace with your username:
name = satyrus
version = 3.0.0
author = Pedro Maciel Xavier
author_email = pedromxavier@poli.ufrj.br
description = Satyrus3 Optimization Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.lam.ufrj.br/~pmxavier/projects/satyrus/
project_urls =
    Bug Tracker = https://github.com/pedromxavier/Satyrus3/issues
    Source = https://github.com/pedromxavier/Satyrus3
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X

[options]
package_dir=
    =src
packages =
    satyrus
    satyrus.api
    satyrus.assets
    satyrus.cli
    satyrus.compiler
    satyrus.compiler.instructions
    satyrus.parser
    satyrus.parser.legacy
    satyrus.satlib
    satyrus.types
    satyrus.types.symbols
scripts =
    bin/satyrus
install_requires =
    ply
    colorama
    tabulate
python_requires = >=3.7, <4

[options.entry_points]
console_scripts =
        satyrus = satyrus:main

[options.extras_require]
dwave = 
    dwave-neal
gurobi =
    gurobipy
    numpy
    cvxpy
glpk = 
    numpy
    cvxpy
    cvxopt
all =
    dwave-neal
    gurobipy
    numpy
    cvxpy
    cvxopt