[metadata]
# replace with your username:
name = satyrus
version = 3.0.7
author = Pedro Maciel Xavier
author_email = pedromxavier@poli.ufrj.br
description = Satyrus3 Optimization Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://satyrus3.github.io
project_urls =
    Bug Tracker = https://github.com/pedromxavier/Satyrus3/issues
    Source = https://github.com/pedromxavier/Satyrus3
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X

[options]
package_dir =
    =src
packages =
    satyrus
    satyrus.api
    satyrus.assets
    satyrus.cli
    satyrus.compiler
    satyrus.compiler.instructions
    satyrus.error
    satyrus.parser
    satyrus.parser.legacy
    satyrus.satlib
    satyrus.satyrus
    satyrus.symbols
    satyrus.types
scripts =
    bin/satyrus
install_requires =
    ply >= 3.11.0
    cstream >= 1.0.2, < 1.0.3
    tabulate
    numpy
python_requires = >=3.7, <4

[options.data_files]
satyrus_data =
    src/satyrus/data/.satyrus
    src/satyrus/data/.sat-api
    src/satyrus/data/api/csv.py
    src/satyrus/data/api/dwave.py
    src/satyrus/data/api/gurobi.py
    src/satyrus/data/api/qubo.py

[options.entry_points]
console_scripts =
        satyrus = satyrus:SatCLI.run
        sat-api = satyrus:SatAPICLI.run

[options.extras_require]
dwave = 
    dwave-neal
gurobi =
    gurobipy
all =
    dwave-neal
    gurobipy
dev =
    dwave-neal
    gurobipy
    pytest
    pytest-cov
    twine
    build